# atome-voc-agent

./: .dockerignore  .env.example  .gitignore  Atome Customer Voice Agent Building - A Step by Step Tutorial.md  Dockerfile.backend  README.md  alembic.ini  atome_social_media_monitoring_agent_prd.md  deploy.sh  docker-compose.yml  fly.backend.toml  fly.frontend.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_lark_bots.py  003_add_routing_primary_owner.py
backend/: config.py  database.py  main.py
backend/api/: alerts.py  analytics.py  auth.py  crawler.py  feedback.py  incidents.py  lark_bots.py  monitor.py  routing.py  taxonomy.py
backend/models/: __init__.py  alert.py  feedback.py  incident.py  lark_bot.py  post.py  routing.py  taxonomy.py  user.py
backend/schemas/: alert.py  analytics.py  feedback.py  incident.py  lark_bot.py  post.py  routing.py
backend/services/: alerting.py  clustering.py  crawler_reddit.py  crawler_twitter.py  dedup.py  llm_annotator.py  llm_prompts.py  severity_calculator.py
backend/templates/: email_digest.html  lark_card.json  slack_critical.json
frontend/: .dockerignore  Dockerfile  fly.toml  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AlertFeedItem.tsx  (+13 more)
scripts/: backfill_crawl.py  seed_lark_bots.py  seed_routing.py  seed_taxonomy.py
tests/: conftest.py  test_alerts.py  test_analytics.py  test_dedup.py  test_feedback.py  test_incidents.py  test_monitor.py  test_severity.py  test_taxonomy.py
(+13 files in other folders)
